feat(api): add scalar and redoc
